--- a/manual/platform/clip.tex
+++ b/manual/platform/clip.tex
@@ -17,6 +17,7 @@
 %For use when referring to the player. E.g. the \daps\ capacity...
 \newcommand{\daps}{player's}
 \newcommand{firmwarefilename}{\fname{rockbox.sansa}}
+\newcommand{\firmwareextension}{\fname{sansa}}
 \newcommand{\screenshotsize}{3cm}
 \newcommand{\disk}{flash storage}
 
