--- a/manual/plugins/text_editor.tex
+++ b/manual/plugins/text_editor.tex
@@ -1,4 +1,4 @@
-\subsection{Text Editor}
+\subsection{\label{sec:text_editor}Text Editor}
 This plugin allows you to view and edit simple text documents on your DAP.
 You can view files by using \setting{Open with} from the
 \setting{Context Menu} (see \reference{ref:Contextmenu}).
