--- a/manual/platform/e200.tex
+++ b/manual/platform/e200.tex
@@ -17,6 +17,7 @@
 %For use when referring to the player. E.g. the \daps\ capacity ...
 \newcommand{\daps}{player's}
 \newcommand{\firmwarefilename}{\fname{rockbox.mi4}}
+\newcommand{\firmwareextension}{\fname{mi4}}
 \newcommand{\screenshotsize}{4cm}
 \newcommand{\disk}{flash storage}
 
