--- a/manual/platform/gigabeatf.tex
+++ b/manual/platform/gigabeatf.tex
@@ -18,6 +18,7 @@
 %For use when referring to the player. E.g. the \daps\ capacity ...
 \newcommand{\daps}{player's}
 \newcommand{\firmwarefilename}{\fname{rockbox.gigabeat}}
+\newcommand{\firmwareextension}{\fname{gigabeat}}
 \newcommand{\screenshotsize}{6cm}
 \newcommand{\disk}{hard disk}
 
