--- a/manual/platform/ipodcolor.tex
+++ b/manual/platform/ipodcolor.tex
@@ -16,6 +16,7 @@
 %For use when referring to the player. E.g. the \daps\ capacity ...
 \newcommand{\daps}{player's}
 \newcommand{\firmwarefilename}{\fname{rockbox.ipod}}
+\newcommand{\firmwareextension}{\fname{ipod}}
 \newcommand{\screenshotsize}{6cm}
 \newcommand{\disk}{hard disk}
 
