--- a/manual/platform/ipodnano.tex
+++ b/manual/platform/ipodnano.tex
@@ -15,6 +15,7 @@
 %For use when referring to the player. E.g. the \daps\ capacity ...
 \newcommand{\daps}{player's}
 \newcommand{\firmwarefilename}{\fname{rockbox.ipod}}
+\newcommand{\firmwareextension}{\fname{ipod}}
 \newcommand{\screenshotsize}{4cm}
 \newcommand{\disk}{flash storage}
 
