--- a/manual/platform/m5.tex
+++ b/manual/platform/m5.tex
@@ -18,6 +18,7 @@
 %For use when referring to the player. E.g. the \daps\ capacity ...
 \newcommand{\daps}{player's}
 \newcommand{\firmwarefilename}{\fname{rockbox.iaudio}}
+\newcommand{\firmwareextension}{\fname{iaudio}}
 \newcommand{\screenshotsize}{4cm}
 \newcommand{\disk}{hard disk}
 
