--- a/manual/platform/player.tex
+++ b/manual/platform/player.tex
@@ -18,6 +18,7 @@
 %For use when referring to the player. E.g. the \daps\ capacity ...
 \newcommand{\daps}{player's}
 \newcommand{\firmwarefilename}{\fname{archos.mod}}
+\newcommand{\firmwareextension}{\fname{mod}}
 \newcommand{\screenshotsize}{4cm}
 \newcommand{\disk}{hard disk}
 
