Minor corrections to the .colours file editing; added .colours to the list of supported files.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20407 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/appendix/file_formats.tex
+++ b/manual/appendix/file_formats.tex
@@ -53,7 +53,11 @@
     & Rockbox Video & \fname{.rvf} & View a movie (Rockbox format)\\}
 }
   & Link & \fname{.link} & Display list of target files and directories;
-    selecting one jumps to the target. \emph{see \reference{ref:Shortcutsplugin}}\\
+    selecting one jumps to the target. See \reference{ref:Shortcutsplugin}.\\
+\opt{lcd_color}{
+  & Colours & \fname{.colours} & Open the colours file for editing.
+    See \reference{ref:ChangingFiletypeColours}.\\
+}
 \bottomrule
 \end{tabularx}
 \end{center}
