Make Jz4740 USB tools a bit more configurable by letting you choose what file you want to upload when doing usbtool 10
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20415 a1c6a512-1295-4272-9138-f99709370657

--- a/utils/jz4740_tools/README
+++ b/utils/jz4740_tools/README
@@ -5,6 +5,9 @@
   Copyright (C) 2008
 *******************************************************************************
 
+To compile usbtools, you'll need jz_xloader (which can be get at
+http://repo.or.cz/w/jz_xloader.git).
+
 When you're on Linux, just type "make linux" to compile all the utilities (make
 sure you have libusb-dev installed).
 For cleaning: "make clean-linux"
