Restore the author's original punctuation
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20423 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/advanced_topics/main.tex
+++ b/manual/advanced_topics/main.tex
@@ -44,7 +44,7 @@ file find the instructions on the Rockbox website:
   files of different types in different colours, depending on the file extension. 
 
   \subsubsection{Set-up}
-  There are two steps to changing the filetype colours: creating
+  There are two steps to changing the filetype colours -- creating
   a file with the extension \fname{.colours} and then activating it using
   a config file.  The \fname{.colours} files \emph{must} be stored in
   the \fname{/.rockbox/themes/} directory.
