Unify the description style in the "file formats" table (FS#10038)
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20433 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/appendix/file_formats.tex
+++ b/manual/appendix/file_formats.tex
@@ -7,50 +7,50 @@
 \textbf{Icon} & \textbf{File Type} & \textbf{Extension} 
   & \textbf{Action when selected} \\\midrule
 \includegraphics[width=0.37cm]{appendix/images/icon-directory.png} 
-  & Directory & \emph{none} & The browser enters that directory \\
+  & Directory & \emph{none} & Enter the directory \\
 \includegraphics[width=0.37cm]{appendix/images/icon-audio-file.png} 
   & Audio file & 
   \opt{MASCODEC}{\fname{.mp2, .mp3}}\opt{swcodec}{\emph{various (see
     \reference{ref:Supportedaudioformats}})}
-  & Rockbox takes you to the WPS and starts playing the file \\
+  & Start playing the file and show the WPS\\
   \includegraphics[width=0.37cm]{appendix/images/icon-cuesheet.png} 
   & Cuesheet & \fname{.cue} & View a cuesheet file \\
 \opt{masf}{
   \includegraphics[width=0.37cm]{appendix/images/icon-wav-file.png} 
-    & Wave Audio File & \fname{.wav} & Play a WAV file \\%
+    & Wave Audio File & \fname{.wav} & Play the WAV file \\%
 }
 \includegraphics[width=0.37cm]{appendix/images/icon-playlist.png}
-  & Playlist & \fname{.m3u, .m3u8} & Rockbox loads the playlist and starts playing 
+  & Playlist & \fname{.m3u, .m3u8} & Load the playlist and start playing 
     the first file \\
 \includegraphics[width=0.37cm]{appendix/images/icon-rolo.png} 
   & Rockbox firmware & 
     \opt{player}{\fname{.mod}}\opt{recorder,recorderv2fm,ondiofm,ondiosp}{\fname{.ajz}}%
     \opt{h100,h300}{\fname{.iriver}}\opt{ipod}{\fname{.ipod}}\opt{iaudio}{\fname{.iaudio}}%
     \opt{h10,h10_5gb,sansa}{\fname{.mi4}}\opt{gigabeat}{\fname{.gigabeat}}
-  & ROLO will load the new firmware \\
+  & Load the new firmware with ROLO \\
 \includegraphics[width=0.37cm]{appendix/images/icon-wps.png} 
-  & While Playing Screen & \fname{.wps} & The new WPS display configuration will be loaded \\
+  & While Playing Screen & \fname{.wps} & Load the new WPS display configuration \\
 \includegraphics[width=0.37cm]{appendix/images/icon-lang.png} 
-  & Language File & \fname{.lng} & Loads a language file \\
+  & Language File & \fname{.lng} & Load the language file \\
 \includegraphics[width=0.37cm]{appendix/images/icon-text.png} 
-  & Text File & \fname{.txt} & This will display the text file using Rockbox text browser plugin\\
+  & Text File & \fname{.txt} & Display the text file using the text viewer plugin\\
 \includegraphics[width=0.37cm]{appendix/images/icon-config.png} 
-  & Configuration File & \fname{.cfg} & The settings file will be loaded\\
+  & Configuration File & \fname{.cfg} & Load the settings file\\
 \includegraphics[width=0.37cm]{appendix/images/icon-font.png} 
-  & Font & \fname{.fnt} & This font will replace the current one\\
+  & Font & \fname{.fnt} & Change the user interface font to this one\\
 \includegraphics[width=0.37cm]{appendix/images/icon-rock.png} 
-  & Plugin & \fname{.rock} & Starts a Rockbox plugin\\
+  & Plugin & \fname{.rock} & Start the plugin\\
 \opt{archos}{
   \includegraphics[width=0.37cm]{appendix/images/icon-ucl.png} 
-    & Flash Image & \fname{.ucl} & This Rockbox image will be flashed into the ROM \\
+    & Flash Image & \fname{.ucl} & Flash the Rockbox image into the ROM \\
   }
 \includegraphics[width=0.37cm]{appendix/images/icon-chip8.png} 
-  & Chip8 game & \fname{.ch8} & Play a Chip8 game \\
+  & Chip8 game & \fname{.ch8} & Play the Chip8 game \\
 \includegraphics[width=0.37cm]{appendix/images/icon-image-file.png} 
-  & Image & \fname{.jpg} & View a JPEG image \\
+  & Image & \fname{.jpg} & View the JPEG image \\
 \opt{MASCODEC}{\opt{lcd_bitmap}{
   \includegraphics[width=0.37cm]{appendix/images/icon-movie-file.png} 
-    & Rockbox Video & \fname{.rvf} & View a movie (Rockbox format)\\}
+    & Rockbox Video & \fname{.rvf} & View the movie (Rockbox format)\\}
 }
   & Link & \fname{.link} & Display list of target files and directories;
     selecting one jumps to the target. See \reference{ref:Shortcutsplugin}.\\
