We have a file selected, so it's known
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20448 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/appendix/file_formats.tex
+++ b/manual/appendix/file_formats.tex
@@ -14,7 +14,7 @@
     \reference{ref:Supportedaudioformats}})}
   & Start playing the file and show the WPS\\
   \includegraphics[width=0.37cm]{appendix/images/icon-cuesheet.png} 
-  & Cuesheet & \fname{.cue} & View a cuesheet file \\
+  & Cuesheet & \fname{.cue} & View the cuesheet file \\
 \opt{masf}{
   \includegraphics[width=0.37cm]{appendix/images/icon-wav-file.png} 
     & Wave Audio File & \fname{.wav} & Play the WAV file \\%
