Use a real word instead of 'filename'
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20450 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/advanced_topics/main.tex
+++ b/manual/advanced_topics/main.tex
@@ -153,7 +153,7 @@ file find the instructions on the Rockbox website:
   The only restriction is that they must end in \fname{.wps}. When you ``play''
   a \fname{.wps} file, it will be used for future WPS screens, and if the 
   ``played'' \fname{.wps} file is located in the \fname{/.rockbox/wps} directory, it 
-  will be remembered and used after reboot. The \fname{.wps} filename must be 
+  will be remembered and used after reboot. The name of the \fname{.wps} file must be 
   no more than 24 characters long for it to be remembered.
 \end{description}
 
