Dont't give the impression that the lines should be comments, and delete the non-setting line. Lines should be indented by 4 because of the example environment.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20451 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/advanced_topics/main.tex
+++ b/manual/advanced_topics/main.tex
@@ -375,16 +375,15 @@ files use the following formatting rules: %
 
 Example of a configuration file:
 \begin{example}
-  # Example configuration file
-  # volume: 70
-  # bass: 11
-  # treble: 12
-  # balance: 0
-  # time format: 12hour
-  # volume display: numeric
-  # show files: supported
-  # wps: /.rockbox/car.wps
-  # lang: /.rockbox/afrikaans.lng
+    volume: 70
+    bass: 11
+    treble: 12
+    balance: 0
+    time format: 12hour
+    volume display: numeric
+    show files: supported
+    wps: /.rockbox/car.wps
+    lang: /.rockbox/afrikaans.lng
 \end{example}
 
 \note{As you can see from the example, configuration files do not need to 
