Enable the pictureflow chapter for bitmapped hwcodec targets. Document controls as they are currently, correct 'Exit' menu item to 'Quit', add screenshot, also enable the album art section for them as it explains the requirements.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20458 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/appendix/appendix.tex
+++ b/manual/appendix/appendix.tex
@@ -5,7 +5,7 @@
 
 \input{appendix/wps_tags.tex}
 
-\opt{swcodec}{\opt{tagcache}{
+\opt{lcd_bitmap}{\opt{tagcache}{
 \input{appendix/album_art.tex}
 }}
 
