--- a/manual/plugins/main.tex
+++ b/manual/plugins/main.tex
@@ -102,7 +102,7 @@ text files%
 
 \opt{lcd_bitmap}{\input{plugins/oscilloscope.tex}}
 
-\opt{tagcache}{\opt{swcodec}{\input{plugins/pictureflow.tex}}}
+\opt{tagcache}{\opt{lcd_bitmap}{\input{plugins/pictureflow.tex}}}
 
 \opt{lcd_bitmap}{\input{plugins/plasma.tex}}
 
