--- a/manual/rockbox_interface/main.tex
+++ b/manual/rockbox_interface/main.tex
@@ -631,11 +631,14 @@ that also changes various other settings like file view, LCD settings and
 all other settings that can be modified using \fname{.cfg} files. This topic
 is discussed in more detail in \reference{ref:manage_settings}.
 The Rockbox distribution comes with some themes that should look nice on
-your \dap{}. \note{Some of the themes shipped with Rockbox need additional
+your \dap{}.
+\opt{lcd_bitmap}{
+\note{Some of the themes shipped with Rockbox need additional
 fonts from the fonts package, so make sure you installed them.
 Also, if you downloaded additional themes from the Internet make sure you
 have the needed fonts installed as otherwise the theme may get displayed
 garbled.}
+}
 
 \opt{usb_charging}
 {
